# ai_medical_assistant

./: .env.example  .gitignore  README.md  main.py  medical_queries.json  pyproject.toml
backend/: config.py
backend/api/: app.py  chat.py  conversation.py  history.py  message.py
backend/db/: __init__.py  connector.py  conversations.py  filter_by_user  filter_by_user.py  load_history.py  messages.py  save_query.py
backend/models/: ConversationHistory.py  MedicalQuery.py  Turn.py  __init__.py  domain.py  prompts.py  requests.py  responses.py  tools.py
backend/prompts/: __init__.py  injection_patterns.py  summarize.py  system.py  user.py
backend/services/: __init__.py  conversation.py  streams.py  summarize.py
backend/tests/: test_conversation.py  test_pubmed.py  test_system_prompt.py  test_tool_executor.py
backend/tools/: __init__.py  tool_executor.py  tool_schemas.py  tools.py
backend/utils/: __init__.py  batch_helpers.py  chat_helpers.py  decorators.py  pubmed.py  sanitize.py  timer.py  tool_schemas.py  tools.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: chat.ts  conversations.test.ts  conversations.ts  user.ts
frontend/src/components/: Chat.test.tsx  Chat.tsx  ConversationMenu.test.tsx  ConversationMenu.tsx  SidePanel.test.tsx  SidePanel.tsx
frontend/src/hooks/: useChatStream.ts  useConversation.ts  useConversationHistory.ts  useUser.ts  useUserConversations.ts
frontend/src/utils/: consumeStream.ts
sql/: schema.sql  seed.sql
