[project]
name = "ai-medical-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "anthropic>=0.107.1",
    "httpx>=0.28.1",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.136.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "types-aiofiles>=25.1.0.20260518",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
